added Malayalam translation (ml.po)

--- a/po/ml.po
+++ b/po/ml.po
@@ -1,56 +1,57 @@
 # Malayalam translations for drawer package.
 # This file is put in the public domain.
 #
-# Automatically generated, 2025.
+# Indraneel Rajeevan <https://github.com/indraneel12>, 2025.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-02-02 06:18-0500\n"
-"PO-Revision-Date: 2025-02-02 06:18-0500\n"
-"Last-Translator: Automatically generated\n"
+"PO-Revision-Date: 2025-02-24 20:10+0530\n"
+"Last-Translator: Indraneel Rajeevan <https://github.com/indraneel12>\n"
 "Language-Team: Malayalam\n"
 "Language: ml\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
-msgstr ""
+msgstr "ഡ്രോയർ മൊഡ്യൂൾ"
 
 #: src/e_mod_config.c:106
 msgid "Plugins selection"
-msgstr ""
+msgstr "പ്ലഗിനുകൾ തിരഞ്ഞെടുക്കൽ"
 
 #: src/e_mod_config.c:109
 msgid "Plugins settings"
-msgstr ""
+msgstr "പ്ലഗിൻ ക്രമീകരണങ്ങൾ"
 
 #: src/e_mod_config.c:171
 msgid "Source plugins"
-msgstr ""
+msgstr "ഉറവിട പ്ലഗിനുകൾ"
 
 #: src/e_mod_config.c:197
 msgid "View plugins"
-msgstr ""
+msgstr "പ്ലഗിനുകൾ കാണുക"
 
 #: src/e_mod_config.c:245 src/e_mod_config.c:266
 msgid "Description: Unavailable"
-msgstr ""
+msgstr "വിവരണം: ലഭ്യമല്ല"
 
 #: src/e_mod_config.c:292
 msgid "Source settings"
-msgstr ""
+msgstr "ഉറവിട ക്രമീകരണങ്ങൾ"
 
 #: src/e_mod_config.c:297
 msgid "View settings"
-msgstr ""
+msgstr "ക്രമീകരണങ്ങൾ കാണുക"
 
 #: src/e_mod_config.c:299
 msgid "Moksha theme"
-msgstr ""
+msgstr "മോക്ഷ ഥീം"
 
 #: src/e_mod_main.c:216
 msgid ""
@@ -62,6 +63,13 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
+"ഡ്രോയർ മൊഡ്യൂൾ കോൺഫിഗറേഷൻ ഡാറ്റ അപ്‌ഗ്രേഡ് ചെയ്യേണ്ടതുണ്ടായിരുന്നു. നിങ്ങളുടെ പഴയ "
+"കോൺഫിഗറേഷൻ<br>മായ്ച്ചു പുതിയൊരു കൂട്ടം സ്ഥിരസ്ഥിതികൾ ആരംഭിക്കപ്പെട്ടിരിക്കുന്നു. വികസന "
+"സമയത്ത് ഇത്<br>പതിവായി സംഭവിക്കും, അതിനാൽ ബഗ് റിപ്പോർട്ട്<br>ചെയ്യരുത്. ഇതിനർത്ഥം "
+"നിങ്ങളുടെ പഴയ കോൺഫിഗറേഷനിൽ ഇല്ലാത്ത<br>ഉപയോഗയോഗ്യമായ പ്രവർത്തനത്തിനായി മൊഡ്യൂളിന് "
+"സ്ഥിരസ്ഥിതിയായി പുതിയ<br>കോൺഫിഗറേഷൻ ഡാറ്റ ആവശ്യമാണ് എന്നാണ്. ഈ പുതിയ സ്ഥിരസ്ഥിതികളുടെ "
+"കൂട്ടം അത് ചേർത്തുകൊണ്ട്<br>അത് പരിഹരിക്കും. നിങ്ങളുടെ ഇഷ്ടത്തിനനുസരിച്ച് ഇപ്പോൾ കാര്യങ്ങൾ "
+"വീണ്ടും<br>ക്രമീകരിക്കാൻ കഴിയും. അസൗകര്യത്തിന് ക്ഷമിക്കുക.<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -71,215 +79,220 @@ msgid ""
 "module was running. This is bad and<br>as a precaution your configuration "
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
+"നിങ്ങളുടെ ഡ്രോയർ മൊഡ്യൂൾ കോൺഫിഗറേഷൻ മൊഡ്യൂൾ പതിപ്പിനേക്കാൾ പുതിയതാണ്. ഇത് "
+"വളരെ<br>വിചിത്രമാണ്. മൊഡ്യൂൾ ഡൗൺഗ്രേഡ് ചെയ്യുകയോ<br>മൊഡ്യൂളിന്റെ പുതിയ പതിപ്പ് "
+"പ്രവർത്തിക്കുന്ന സ്ഥലത്ത് നിന്ന്<br>കോൺഫിഗറേഷൻ പകർത്തുകയോ ചെയ്തില്ലെങ്കിൽ ഇത് സംഭവിക്കാൻ "
+"പാടില്ല. ഇത് മോശമാണ്,<br>മുൻകരുതൽ എന്ന നിലയിൽ നിങ്ങളുടെ കോൺഫിഗറേഷൻ "
+"ഇപ്പോൾ<br>സ്ഥിരസ്ഥിതിയിലേക്ക് പുനഃസ്ഥാപിച്ചിരിക്കുന്നു. അസൗകര്യത്തിന് ക്ഷമിക്കുക.<br>"
 
 #: src/e_mod_main.c:459
 msgid "The plugin is not configurable"
-msgstr ""
+msgstr "ഈ പ്ലഗിൻ കോൺഫിഗർ ചെയ്യാൻ കഴിയില്ല"
 
 #: src/e_mod_main.c:1029 src/e_mod_main.c:1037 src/e_mod_main.c:1051
 #: src/e_mod_main.c:1063 src/e_mod_main.c:1131 src/e_mod_main.c:1182
 #: src/e_mod_main.c:1228
 msgid "Drawer Plugins"
-msgstr ""
+msgstr "ഡ്രോയർ പ്ലഗിനുകൾ"
 
 #: src/e_mod_main.c:1030
 #, c-format
 msgid "The plugin '%s' was not found."
-msgstr ""
+msgstr "'%s' എന്ന പ്ലഗിൻ കണ്ടെത്താനായില്ല."
 
 #: src/e_mod_main.c:1038
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr ""
+msgstr "'%s' എന്ന പ്ലഗിൻ തുറക്കാൻ കഴിഞ്ഞില്ല."
 
 #: src/e_mod_main.c:1052 src/e_mod_main.c:1132 src/e_mod_main.c:1183
 #: src/e_mod_main.c:1229
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr ""
+msgstr "'%s' എന്ന പ്ലഗിനിൽ ആവശ്യമായ എല്ലാ ഫംഗ്ഷനുകളും അടങ്ങിയിട്ടില്ല."
 
 #: src/e_mod_main.c:1064
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr ""
+msgstr "'%s' എന്ന പ്ലഗിന്നിന് ആവശ്യമായ API പതിപ്പ് ഇല്ല."
 
 #: src/e_mod_main.c:1394
 msgid "Drawer"
-msgstr ""
+msgstr "ഡ്രോയർ"
 
 #: src/e_mod_main.c:1487
 msgid "Drawer Configuration Updated"
-msgstr ""
+msgstr "ഡ്രോയർ കോൺഫിഗറേഷൻ അപ്ഡേറ്റ് ചെയ്തു"
 
 #: src/e_mod_main.c:1854
 msgid "Settings"
-msgstr ""
+msgstr "ക്രമീകരണങ്ങൾ"
 
 #: src/plugins/sources/directory_watcher.c:253
 msgid "Open Containing Directory"
-msgstr ""
+msgstr "അടങ്ങുന്ന ഡയറക്ടറി തുറക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:263
 msgid "Directory Watcher settings"
-msgstr ""
+msgstr "ഡയറക്ടറി വാച്ചർ ക്രമീകരണങ്ങൾ"
 
 #: src/plugins/sources/directory_watcher.c:317
 msgid "Home"
-msgstr ""
+msgstr "ഹോം"
 
 #: src/plugins/sources/directory_watcher.c:380
 #, c-format
 msgid "Directory (%s)"
-msgstr ""
+msgstr "ഡയറക്ടറി (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr ""
+msgstr "ഡ്രോയർ പ്ലഗിൻ : ഡയറക്ടറി വാച്ചർ"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
-msgstr ""
+msgstr "വാച്ച് പാത്ത്"
 
 #: src/plugins/sources/directory_watcher.c:513
 msgid "Custom file manager"
-msgstr ""
+msgstr "കസ്റ്റം ഫയൽ മാനേജർ"
 
 #: src/plugins/sources/directory_watcher.c:519
 msgid "Sort Options"
-msgstr ""
+msgstr "ഓപ്‌ഷനുകൾ അടുക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:520
 msgid "Sort directories first"
-msgstr ""
+msgstr "ആദ്യം ഡയറക്ടറികൾ അടുക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:524
 msgid "Sort by name"
-msgstr ""
+msgstr "പേര് പ്രകാരം അടുക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:526
 msgid "Sort by access time"
-msgstr ""
+msgstr "ഉപയോഗിച്ച സമയം അനുസരിച്ച് അടുക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:528
 msgid "Sort by modification time"
-msgstr ""
+msgstr "പരിഷ്ക്കരണ സമയം അനുസരിച്ച് അടുക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by change time"
-msgstr ""
+msgstr "മാറ്റ സമയം അനുസരിച്ച് അടുക്കുക"
 
 #: src/plugins/sources/directory_watcher.c:532
 msgid "Sort by size"
-msgstr ""
+msgstr "വലിപ്പം അനുസരിച്ച് അടുക്കുക"
 
 #: src/plugins/sources/history.c:179
 msgid "History settings"
-msgstr ""
+msgstr "ഹിസ്റ്ററി ക്രമീകരണങ്ങൾ"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
-msgstr ""
+msgstr "ഇനത്തിൻ്റെ ഗുണവിശേഷതകൾ മാറ്റുക"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "ഇനം ബ്ലാക്ക്‌ലിസ്റ്റ് ചെയ്യുക"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
-msgstr ""
+msgstr "ഇനം ഉപേക്ഷിക്കുക"
 
 #: src/plugins/sources/history.c:583
 msgid "Drawer Plugin : History"
-msgstr ""
+msgstr "ഡ്രോയർ പ്ലഗിൻ : ഹിസ്റ്ററി"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
-msgstr ""
+msgstr "സോർട്ടിംഗ് ഓപ്ഷനുകൾ"
 
 #: src/plugins/sources/history.c:631
 msgid "Sort applications by executable"
-msgstr ""
+msgstr "എക്സിക്യൂട്ടബിൾ പ്രകാരം ആപ്ലിക്കേഷനുകൾ അടുക്കുക"
 
 #: src/plugins/sources/history.c:633
 msgid "Sort applications by date"
-msgstr ""
+msgstr "തീയതി പ്രകാരം ആപ്ലിക്കേഷനുകൾ അടുക്കുക"
 
 #: src/plugins/sources/history.c:635
 msgid "Sort applications by popularity"
-msgstr ""
+msgstr "ജനപ്രിയത അനുസരിച്ച് ആപ്ലിക്കേഷനുകൾ അടുക്കുക"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "ബ്ലാക്ക്‌ലിസ്റ്"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "ബ്ലാക്ക്‌ലിസ്റ്റ് പ്രവർത്തനക്ഷമമാക്കുക"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "പൊതുവായ"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "ബ്ലാക്ക്‌ലിസ്റ്റ് ചെയ്ത അപ്ലിക്കേഷനുകൾ"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
-msgstr ""
+msgstr "ചേർക്കുക"
 
 #: src/plugins/sources/history.c:663 src/plugins/sources/launcher.c:573
 msgid "Delete"
-msgstr ""
+msgstr "ഉപേക്ഷിക്കുക"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "ബ്ലാക്ക്‌ലിസ്റ്റ് ചെയ്ത ആപ്ലിക്കേഷൻ ചേർക്കുക"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "ആപ്ലിക്കേഷനുടെ പേര് നൽകുക"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
-msgstr ""
+msgstr "ലോഞ്ചർ ക്രമീകരണങ്ങൾ"
 
 #: src/plugins/sources/launcher.c:327
 #, c-format
 msgid "%s source"
-msgstr ""
+msgstr "%s ഉറവിടം"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
-msgstr ""
+msgstr "ഡ്രോയർ പ്ലഗിൻ : ലോഞ്ചർ"
 
 #: src/plugins/sources/launcher.c:563
 msgid "Selected Bar Source"
-msgstr ""
+msgstr "തിരഞ്ഞെടുത്ത ബാർ ഉറവിടം"
 
 #: src/plugins/sources/launcher.c:575
 msgid "Configure"
-msgstr ""
+msgstr "കോൺഫിഗർ ചെയ്യുക"
 
 #: src/plugins/sources/launcher.c:586
 msgid "Unsorted"
-msgstr ""
+msgstr "ക്രമരഹിതമായ"
 
 #: src/plugins/sources/launcher.c:588
 msgid "Sort applications by local rating"
-msgstr ""
+msgstr "പ്രാദേശിക റേറ്റിംഗ് അനുസരിച്ച് ആപ്ലിക്കേഷനുകൾ അടുക്കുക"
 
 #: src/plugins/sources/launcher.c:590
 msgid "Sort applications by overall popularity"
-msgstr ""
+msgstr "മൊത്തത്തിലുള്ള ജനപ്രീതി അനുസരിച്ച് ആപ്ലിക്കേഷനുകൾ അടുക്കുക"
 
 #: src/plugins/sources/launcher.c:625
 msgid "Create new Launcher source"
-msgstr ""
+msgstr "പുതിയ ലോഞ്ചർ ഉറവിടം സൃഷ്ടിക്കുക"
 
 #: src/plugins/sources/launcher.c:626
 msgid "Enter a name for this new source:"
-msgstr ""
+msgstr "ഈ പുതിയ ഉറവിടത്തിന് ഒരു പേര് നൽകുക:"
 
 #: src/plugins/sources/launcher.c:639
 #, c-format
@@ -287,31 +300,33 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
+"\"%s\" ഇല്ലാതാക്കാൻ നിങ്ങൾ അഭ്യർത്ഥിച്ചു.<br><br>ഈ ബാർ ഉറവിടം ഇല്ലാതാക്കണമെന്ന് "
+"നിങ്ങൾക്ക് ഉറപ്പാണോ?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
-msgstr ""
+msgstr "ഈ ബാർ ഉറവിടം ഇല്ലാതാക്കണമെന്ന് നിങ്ങൾക്ക് ഉറപ്പാണോ?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
-msgstr ""
+msgstr "ലിസ്റ്റ് ക്രമീകരണങ്ങൾ"
 
 #: src/plugins/views/list.c:778
 msgid "Drawer Plugin : List"
-msgstr ""
+msgstr "ഡ്രോയർ പ്ലഗിൻ : ലിസ്റ്റ്"
 
 #: src/plugins/views/list.c:814
 msgid "Item size options"
-msgstr ""
+msgstr "ഇനത്തിൻ്റെ വലുപ്പത്തിനുള്ള ഓപ്ഷനുകൾ"
 
 #: src/plugins/views/list.c:815
 msgid "Large"
-msgstr ""
+msgstr "വലുത്"
 
 #: src/plugins/views/list.c:817
 msgid "Medium"
-msgstr ""
+msgstr "ഇടത്തരം"
 
 #: src/plugins/views/list.c:819
 msgid "Small"
-msgstr ""
+msgstr "ചെറുത്"
