--- a/po/hi.po
+++ b/po/hi.po
@@ -1,4 +1,4 @@
-# Hindi translations for drawer package.
+# Hindi translations for the Drawer module.
 # This file is put in the public domain.
 #
 # Automatically generated, 2025.
