--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-02-02 06:18-0500\n"
-"PO-Revision-Date: 2010-11-26 17:53+0100\n"
-"Last-Translator: Fabian Nowak <timystery@arcor.de>\n"
+"PO-Revision-Date: 2025-03-02 13:35+0100\n"
+"Last-Translator: Christian Becker (xpistian) <xpistianbecker@gmail.com>\n"
 "Language-Team: German\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
@@ -35,7 +36,7 @@ msgstr "Quellen-Plugins"
 
 #: src/e_mod_config.c:197
 msgid "View plugins"
-msgstr "Ansichten-Plugins"
+msgstr "Plugins anzeigen"
 
 #: src/e_mod_config.c:245 src/e_mod_config.c:266
 msgid "Description: Unavailable"
@@ -47,11 +48,11 @@ msgstr "Quellen-Einstellungen"
 
 #: src/e_mod_config.c:297
 msgid "View settings"
-msgstr "Ansichten-Einstellungen"
+msgstr "Einstellungen anzeigen"
 
 #: src/e_mod_config.c:299
 msgid "Moksha theme"
-msgstr ""
+msgstr "Moksha-Thema"
 
 #: src/e_mod_main.c:216
 msgid ""
@@ -63,15 +64,15 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
-"Ihre Einstellungen für das Ablagenmodul haben eine Aktualisierung benötigt."
-"<br>Die alten Einstellungen wurden verworfen und mit dem Standard belegt."
-"<br>Dies wird während der Entwicklung regelmäßig passieren, bitte melden Sie "
-"keine Fehler.<br>Dies bedeutet einfach, dass das Modul neue "
-"Einstellungsdaten benötigt, welche die alte<br>Einstellung so nicht bietet. "
-"Die neuen Einstellungen werden dies beheben, indem sie <br>die fehlenden "
-"Werte einbringt. Sie können die Dinge jetzt wieder entsprechend "
-"Ihren<br>Vorlieben einstellen. Entschuldigen Sie bitte die "
-"Unannehmlichkeiten.<br>"
+"Die Einstellungen für das Ablagenmodul benötigten eine Aktualisierung."
+"<br>Die alten Einstellungen wurden verworfen und durch neue "
+"Standardeinstellungen ersetzt.<br>Dies wird während der Entwicklung "
+"regelmäßig vorkommen, bitte melden Sie keine Fehler.<br>Dies bedeutet "
+"einfach, dass das Modul neue Einstellungsdaten benötigt, welche die "
+"alte<br>Einstellung so nicht bietet. Die neuen Einstellungen werden dies "
+"beheben, indem sie <br>die fehlenden Werte einbringt. Sie können die Dinge "
+"jetzt wieder entsprechend Ihren<br>Vorlieben einstellen. Entschuldigen Sie "
+"bitte die Unannehmlichkeiten.<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -83,14 +84,14 @@ msgid ""
 msgstr ""
 "Ihre Einstellungen für das Ablagenmodul sind NEUER als die Modulversion."
 "<br>Dies ist sehr merkwürdig und sollte eigentlich nicht passieren, solange "
-"Sie<br>nicht das Modul deaktualisiert haben oder die Einstellungen von einer "
+"Sie<br>das Modul herabgestuft haben oder die Einstellungen von einer "
 "neueren<br>Modulversion kopiert haben. Daher wurde als Vorsichtsmaßnahme "
 "Ihre Einstellung<br>auf den Standard zurückgesetzt. Entschuldigen Sie bitte "
 "die Unannehmlichkeiten.<br>"
 
 #: src/e_mod_main.c:459
 msgid "The plugin is not configurable"
-msgstr "Das Plugin ist nicht einstellbar"
+msgstr "Das Plugin ist nicht konfigurierbar"
 
 #: src/e_mod_main.c:1029 src/e_mod_main.c:1037 src/e_mod_main.c:1051
 #: src/e_mod_main.c:1063 src/e_mod_main.c:1131 src/e_mod_main.c:1182
@@ -125,7 +126,7 @@ msgstr "Ablage"
 
 #: src/e_mod_main.c:1487
 msgid "Drawer Configuration Updated"
-msgstr "Ablagen-Einstellung aktualisiert"
+msgstr "Ablagen-Konfiguration aktualisiert"
 
 #: src/e_mod_main.c:1854
 msgid "Settings"
@@ -150,7 +151,7 @@ msgstr "Verzeichnis (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr "Ablagen-Plugin: Verzeichnis beobachten"
+msgstr "Ablagen-Plugin: Verzeichnisbeobachter"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
@@ -166,7 +167,7 @@ msgstr "Sortiereinstellungen"
 
 #: src/plugins/sources/directory_watcher.c:520
 msgid "Sort directories first"
-msgstr "Verzeichnisse zuerst"
+msgstr "Verzeichnisse zuerst sortieren"
 
 #: src/plugins/sources/directory_watcher.c:524
 msgid "Sort by name"
@@ -178,20 +179,19 @@ msgstr "Nach Zugriffszeit sortieren"
 
 #: src/plugins/sources/directory_watcher.c:528
 msgid "Sort by modification time"
-msgstr "Nach Veränderungsdatum sortieren"
+msgstr "Nach Modifikationsdatum sortieren"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by change time"
-msgstr "Nach Veränderungsdatum sortieren"
+msgstr "Nach Änderungsdatum sortieren"
 
 #: src/plugins/sources/directory_watcher.c:532
 msgid "Sort by size"
 msgstr "Nach Größe sortieren"
 
 #: src/plugins/sources/history.c:179
-#, fuzzy
 msgid "History settings"
-msgstr "Listeneinstellungen"
+msgstr "Verlaufseinstellungen"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
@@ -199,51 +199,47 @@ msgstr "Elementeigenschaften ändern"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "Eintrag blockieren"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
 msgstr "Element entfernen"
 
 #: src/plugins/sources/history.c:583
-#, fuzzy
 msgid "Drawer Plugin : History"
-msgstr "Ablagen-Plugin: Liste"
+msgstr "Ablagen-Plugin: Verlauf"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
 msgstr "Sortiereinstellungen"
 
 #: src/plugins/sources/history.c:631
-#, fuzzy
 msgid "Sort applications by executable"
-msgstr "Anwendungen nach lokaler Bewertung sortieren"
+msgstr "Anwendungen ausführbarer Datei sortieren"
 
 #: src/plugins/sources/history.c:633
-#, fuzzy
 msgid "Sort applications by date"
-msgstr "Anwendungen nach lokaler Bewertung sortieren"
+msgstr "Anwendungen Datum sortieren"
 
 #: src/plugins/sources/history.c:635
-#, fuzzy
 msgid "Sort applications by popularity"
-msgstr "Anwendungen nach insgesamter Beliebtheit sortieren"
+msgstr "Anwendungen nach Beliebtheit sortieren"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "Ausschlussliste"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "Liste geblockter Anwendungen aktivieren"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "Allgemein"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "Geblockte Anwendungen"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
@@ -255,11 +251,11 @@ msgstr "Löschen"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "Geblockte Anwendung hinzufügen"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "Anwendungsnamen eingeben"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
@@ -268,7 +264,7 @@ msgstr "Startereinstellungen"
 #: src/plugins/sources/launcher.c:327
 #, c-format
 msgid "%s source"
-msgstr "Quelle %s"
+msgstr "%s-Quelle"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
@@ -280,7 +276,7 @@ msgstr "Ausgewählte Leistenquelle"
 
 #: src/plugins/sources/launcher.c:575
 msgid "Configure"
-msgstr "Einstellen"
+msgstr "Konfigurieren"
 
 #: src/plugins/sources/launcher.c:586
 msgid "Unsorted"
@@ -292,7 +288,7 @@ msgstr "Anwendungen nach lokaler Bewertung sortieren"
 
 #: src/plugins/sources/launcher.c:590
 msgid "Sort applications by overall popularity"
-msgstr "Anwendungen nach insgesamter Beliebtheit sortieren"
+msgstr "Anwendungen nach Gesamtbeliebtheit sortieren"
 
 #: src/plugins/sources/launcher.c:625
 msgid "Create new Launcher source"
@@ -308,8 +304,8 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
-"Sie möchten \"%s\" entfernen.<br><br>Möchten Sie diese Leistenquelle "
-"wirklich löschen?"
+"Sie möchten \"%s\" löschen.<br><br>Möchten Sie diese Leistenquelle wirklich "
+"löschen?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
