--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: drawer\n"
 "Report-Msgid-Bugs-To: moksha@bodhilinux.com\n"
 "POT-Creation-Date: 2025-02-02 06:18-0500\n"
-"PO-Revision-Date: 2009-11-14 03:31+0000\n"
+"PO-Revision-Date: 2025-03-10 08:09-0300\n"
 "Last-Translator: Vagner K. Dos Santos <vagner.ks2@gmail.com>\n"
 "Language-Team: Brazilian Portuguese\n"
 "Language: pt_BR\n"
@@ -16,15 +16,15 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Launchpad-Export-Date: 2009-11-15 04:48+0000\n"
-"X-Generator: Launchpad (build Unknown)\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
-msgstr ""
+msgstr "Módulo Gaveta"
 
 #: src/e_mod_config.c:106
 msgid "Plugins selection"
-msgstr ""
+msgstr "Seleção de plugins"
 
 #: src/e_mod_config.c:109
 msgid "Plugins settings"
@@ -32,7 +32,7 @@ msgstr "Configurações dos Plugins"
 
 #: src/e_mod_config.c:171
 msgid "Source plugins"
-msgstr ""
+msgstr "Plugins fonte"
 
 #: src/e_mod_config.c:197
 msgid "View plugins"
@@ -44,15 +44,15 @@ msgstr "Descrição: Indisponível"
 
 #: src/e_mod_config.c:292
 msgid "Source settings"
-msgstr ""
+msgstr "Configurações de origem"
 
 #: src/e_mod_config.c:297
 msgid "View settings"
-msgstr ""
+msgstr "Configurações de visualização"
 
 #: src/e_mod_config.c:299
 msgid "Moksha theme"
-msgstr ""
+msgstr "Tema do Moksha"
 
 #: src/e_mod_main.c:216
 msgid ""
@@ -64,6 +64,15 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
+"Dados de configuração do módulo Gaveta precisaram de atualização. Sua "
+"configuração<br>antiga foi apagada e um novo conjunto de valores padrão "
+"inicializado. Isto<br>acontecerá regularmente durante o desenvolvimento, "
+"portanto não relate um<br>bug. Isto simplesmente significa que o módulo "
+"precisa de novos dados<br>de configuração por padrão para funcionalidades "
+"utilizáveis que sua<br>configuração antiga simplesmente não possui. Este "
+"novo conjunto de padrões resolverá<br>isso adicionando-os. Você pode "
+"reconfigurar as coisas agora ao seu<br>gosto. Desculpe pela inconveniência."
+"<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -73,6 +82,12 @@ msgid ""
 "module was running. This is bad and<br>as a precaution your configuration "
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
+"Sua configuração do módulo Gaveta é MAIS NOVA do que a versão do módulo. "
+"Isto é<br>muito estranho. Isto não deveria acontecer a menos que você tenha "
+"retrocedido<br>a versão do módulo ou copiado a configuração de um lugar "
+"onde<br>uma versão mais nova do módulo estava rodando. Isto é ruim<br>e "
+"como precaução a sua configuração foi restaurada para os padrões."
+"<br>Desculpe pela inconveniência.<br>"
 
 #: src/e_mod_main.c:459
 msgid "The plugin is not configurable"
@@ -82,7 +97,7 @@ msgstr "Este plugin não é configuravel"
 #: src/e_mod_main.c:1063 src/e_mod_main.c:1131 src/e_mod_main.c:1182
 #: src/e_mod_main.c:1228
 msgid "Drawer Plugins"
-msgstr ""
+msgstr "Plugins Gaveta"
 
 #: src/e_mod_main.c:1030
 #, c-format
@@ -92,26 +107,26 @@ msgstr "O Plugin '%s' não existe."
 #: src/e_mod_main.c:1038
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr ""
+msgstr "O plugin '%s' não pôde ser aberto."
 
 #: src/e_mod_main.c:1052 src/e_mod_main.c:1132 src/e_mod_main.c:1183
 #: src/e_mod_main.c:1229
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr ""
+msgstr "O plugin `%s`não contém todas as funções requeridas."
 
 #: src/e_mod_main.c:1064
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr ""
+msgstr "O plugin '%s' não possui a versão de API requerida."
 
 #: src/e_mod_main.c:1394
 msgid "Drawer"
-msgstr ""
+msgstr "Gaveta"
 
 #: src/e_mod_main.c:1487
 msgid "Drawer Configuration Updated"
-msgstr ""
+msgstr "Configuração da Gaveta atualizada"
 
 #: src/e_mod_main.c:1854
 msgid "Settings"
@@ -119,170 +134,169 @@ msgstr "Configurações"
 
 #: src/plugins/sources/directory_watcher.c:253
 msgid "Open Containing Directory"
-msgstr ""
+msgstr "Abrir Diretório contentor"
 
 #: src/plugins/sources/directory_watcher.c:263
 msgid "Directory Watcher settings"
-msgstr ""
+msgstr "Configurações de alerta de Diretório"
 
 #: src/plugins/sources/directory_watcher.c:317
 msgid "Home"
-msgstr ""
+msgstr "Home"
 
 #: src/plugins/sources/directory_watcher.c:380
 #, c-format
 msgid "Directory (%s)"
-msgstr ""
+msgstr "Diretório (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr ""
+msgstr "Plugin Gaveta : Observador de Diretórios"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
-msgstr ""
+msgstr "Caminho a observar"
 
 #: src/plugins/sources/directory_watcher.c:513
 msgid "Custom file manager"
-msgstr ""
+msgstr "Gerenciador de Arquivos customizado"
 
 #: src/plugins/sources/directory_watcher.c:519
 msgid "Sort Options"
-msgstr ""
+msgstr "Opções de ordenação"
 
 #: src/plugins/sources/directory_watcher.c:520
 msgid "Sort directories first"
-msgstr ""
+msgstr "Ordenar diretórios primeiro"
 
 #: src/plugins/sources/directory_watcher.c:524
 msgid "Sort by name"
-msgstr ""
+msgstr "Ordenar por nome"
 
 #: src/plugins/sources/directory_watcher.c:526
 msgid "Sort by access time"
-msgstr ""
+msgstr "Ordernar por data/hora de acesso"
 
 #: src/plugins/sources/directory_watcher.c:528
 msgid "Sort by modification time"
-msgstr ""
+msgstr "Ordenar por data/hora de modificação"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by change time"
-msgstr ""
+msgstr "Ordenar por data/hora de mudança"
 
 #: src/plugins/sources/directory_watcher.c:532
 msgid "Sort by size"
-msgstr ""
+msgstr "Ordenar por tamanho"
 
 #: src/plugins/sources/history.c:179
-#, fuzzy
 msgid "History settings"
-msgstr "Configurações dos Plugins"
+msgstr "Configurações de Histórico"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
-msgstr ""
+msgstr "Modificar propriedades do item"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "Colocar item na lista negra"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
-msgstr ""
+msgstr "Remover item"
 
 #: src/plugins/sources/history.c:583
 msgid "Drawer Plugin : History"
-msgstr ""
+msgstr "Plugin Gaveta : Histórico"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
-msgstr ""
+msgstr "Opções de ordenação"
 
 #: src/plugins/sources/history.c:631
 msgid "Sort applications by executable"
-msgstr ""
+msgstr "Ordenar aplicativos por executável"
 
 #: src/plugins/sources/history.c:633
 msgid "Sort applications by date"
-msgstr ""
+msgstr "Ordenar aplicativos por data"
 
 #: src/plugins/sources/history.c:635
 msgid "Sort applications by popularity"
-msgstr ""
+msgstr "Ordenar aplicações por popularidade"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "Lista negra"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "Habilitar lista negra"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "Aplicações na lista negra"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
-msgstr ""
+msgstr "Adicionar"
 
 #: src/plugins/sources/history.c:663 src/plugins/sources/launcher.c:573
 msgid "Delete"
-msgstr ""
+msgstr "Apagar"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "Adicionar aplicativos da lista negra"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "Entrar com nome do aplicativo"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
-msgstr ""
+msgstr "Configurações do Lançador"
 
 #: src/plugins/sources/launcher.c:327
 #, c-format
 msgid "%s source"
-msgstr ""
+msgstr "Fonte de %s"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
-msgstr ""
+msgstr "Plugin Gaveta : Lançador"
 
 #: src/plugins/sources/launcher.c:563
 msgid "Selected Bar Source"
-msgstr ""
+msgstr "Fonte da Barra selecionada"
 
 #: src/plugins/sources/launcher.c:575
 msgid "Configure"
-msgstr ""
+msgstr "Configurar"
 
 #: src/plugins/sources/launcher.c:586
 msgid "Unsorted"
-msgstr ""
+msgstr "Não-ordenado"
 
 #: src/plugins/sources/launcher.c:588
 msgid "Sort applications by local rating"
-msgstr ""
+msgstr "Ordenar aplicativos por classificação local"
 
 #: src/plugins/sources/launcher.c:590
 msgid "Sort applications by overall popularity"
-msgstr ""
+msgstr "Ordenar aplicativos por popularidade geral"
 
 #: src/plugins/sources/launcher.c:625
 msgid "Create new Launcher source"
-msgstr ""
+msgstr "Criar nova fonte de Lançador"
 
 #: src/plugins/sources/launcher.c:626
 msgid "Enter a name for this new source:"
-msgstr ""
+msgstr "Entre com um nome para esta nova fonte:"
 
 #: src/plugins/sources/launcher.c:639
 #, c-format
@@ -290,31 +304,33 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
+"Você solicitou apagar \"%s\". <br><br>Tem certeza de que deseja apagar esta "
+"fonte da Barra?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
-msgstr ""
+msgstr "Tem certeza de que deseja apagar esta fonte da Barra?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
-msgstr ""
+msgstr "Configurações de Lista"
 
 #: src/plugins/views/list.c:778
 msgid "Drawer Plugin : List"
-msgstr ""
+msgstr "Plugin Gaveta : Lista"
 
 #: src/plugins/views/list.c:814
 msgid "Item size options"
-msgstr ""
+msgstr "Opções de tamanho de item"
 
 #: src/plugins/views/list.c:815
 msgid "Large"
-msgstr ""
+msgstr "Grande"
 
 #: src/plugins/views/list.c:817
 msgid "Medium"
-msgstr ""
+msgstr "Médio"
 
 #: src/plugins/views/list.c:819
 msgid "Small"
-msgstr ""
+msgstr "Pequeno"
