--- a/po/hi.po
+++ b/po/hi.po
@@ -18,39 +18,39 @@ msgstr ""
 
 #: src/e_mod_config.c:52
 msgid "Drawer Module"
-msgstr ""
+msgstr "ड्रॉअर्स मॉड्यूल"
 
 #: src/e_mod_config.c:106
 msgid "Plugins selection"
-msgstr ""
+msgstr "प्लगइन्स चयन"
 
 #: src/e_mod_config.c:109
 msgid "Plugins settings"
-msgstr ""
+msgstr "प्लगइन्स सेटिंग्स"
 
 #: src/e_mod_config.c:171
 msgid "Source plugins"
-msgstr ""
+msgstr "सोर्स प्लगइन्स"
 
 #: src/e_mod_config.c:197
 msgid "View plugins"
-msgstr ""
+msgstr "प्लगइन्स देखें"
 
 #: src/e_mod_config.c:245 src/e_mod_config.c:266
 msgid "Description: Unavailable"
-msgstr ""
+msgstr "विवरण: अनुपलब्ध"
 
 #: src/e_mod_config.c:292
 msgid "Source settings"
-msgstr ""
+msgstr "सोर्स सेटिंग्स"
 
 #: src/e_mod_config.c:297
 msgid "View settings"
-msgstr ""
+msgstr "सेटिंग्स देखें"
 
 #: src/e_mod_config.c:299
 msgid "Moksha theme"
-msgstr ""
+msgstr "मोक्ष थीम"
 
 #: src/e_mod_main.c:216
 msgid ""
@@ -62,6 +62,12 @@ msgid ""
 "set of defaults will fix<br>that by adding it in. You can re-configure "
 "things now to your<br>liking. Sorry for the inconvenience.<br>"
 msgstr ""
+"ड्रॉअर मॉड्यूल कॉन्फ़िगरेशन डेटा को अपग्रेड करने की आवश्यकता है। आपका पुराना "
+"कॉन्फ़िगरेशन<br> मिटा दिया गया है और डिफ़ॉल्ट का एक नया सेट आरंभ किया गया है। "
+"यह विकास के दौरान नियमित रूप से होगा, इसलिए बग की रिपोर्ट न करें।"
+"इसका सीधा सा मतलब है कि मॉड्यूल को डिफ़ॉल्ट रूप से नए कॉन्फ़िगरेशन<br>डेटा की आवश्यकता है ताकि "
+"उपयोग योग्य कार्यक्षमता हो जो आपके पुराने<br>कॉन्फ़िगरेशन में नहीं है। यह नया "
+"डिफ़ॉल्ट का सेट इसे जोड़कर ठीक कर देगा। अब आप अपनी पसंद के अनुसार चीजों को फिर से कॉन्फ़िगर कर सकते हैं। असुविधा के लिए खेद है।<br>"
 
 #: src/e_mod_main.c:234
 msgid ""
@@ -71,215 +77,218 @@ msgid ""
 "module was running. This is bad and<br>as a precaution your configuration "
 "has been now restored to<br>defaults. Sorry for the inconvenience.<br>"
 msgstr ""
+"आपका ड्रॉअर मॉड्यूल कॉन्फ़िगरेशन मॉड्यूल वर्शन से नया है। यह "
+"बहुत<br> अजीब है। ऐसा तब तक नहीं होना चाहिए जब तक कि आपने मॉड्यूल को डाउनग्रेड न कर दिया हो या कॉन्फ़िगरेशन<br> को ऐसी जगह से कॉपी न कर लिया हो जहाँ मॉड्यूल का नया वर्शन चल रहा हो। यह बुरा<br> है और सावधानी के तौर पर आपके कॉन्फ़िगरेशन को "
+"अब<br> डिफ़ॉल्ट पर बहाल कर दिया गया है। असुविधा के लिए खेद है।<br>"
 
 #: src/e_mod_main.c:459
 msgid "The plugin is not configurable"
-msgstr ""
+msgstr "प्लगइन कॉन्फ़िगर करने योग्य नहीं है"
 
 #: src/e_mod_main.c:1029 src/e_mod_main.c:1037 src/e_mod_main.c:1051
 #: src/e_mod_main.c:1063 src/e_mod_main.c:1131 src/e_mod_main.c:1182
 #: src/e_mod_main.c:1228
 msgid "Drawer Plugins"
-msgstr ""
+msgstr "ड्रॉअर्स प्लगइन"
 
 #: src/e_mod_main.c:1030
 #, c-format
 msgid "The plugin '%s' was not found."
-msgstr ""
+msgstr "प्लगइन '%s' नहीं मिला."
 
 #: src/e_mod_main.c:1038
 #, c-format
 msgid "The plugin '%s' could not be opened."
-msgstr ""
+msgstr "प्लगइन '%s' खोला नहीं जा सका."
 
 #: src/e_mod_main.c:1052 src/e_mod_main.c:1132 src/e_mod_main.c:1183
 #: src/e_mod_main.c:1229
 #, c-format
 msgid "The plugin '%s' does not contain all required functions."
-msgstr ""
+msgstr "प्लगइन '%s' में सभी आवश्यक फ़ंक्शन शामिल नहीं हैं।"
 
 #: src/e_mod_main.c:1064
 #, c-format
 msgid "The plugin '%s' does not have the required API version."
-msgstr ""
+msgstr "प्लगइन '%s' में आवश्यक API वर्सन नहीं है"
 
 #: src/e_mod_main.c:1394
 msgid "Drawer"
-msgstr ""
+msgstr "द्रावर"
 
 #: src/e_mod_main.c:1487
 msgid "Drawer Configuration Updated"
-msgstr ""
+msgstr "द्रावर कॉन्फ़िगरेशन अप्देतेद"
 
 #: src/e_mod_main.c:1854
 msgid "Settings"
-msgstr ""
+msgstr "सेटिंग्स"
 
 #: src/plugins/sources/directory_watcher.c:253
 msgid "Open Containing Directory"
-msgstr ""
+msgstr "युक्त निर्देशिका खोलें"
 
 #: src/plugins/sources/directory_watcher.c:263
 msgid "Directory Watcher settings"
-msgstr ""
+msgstr "निर्देशिका वॉचर सेटिंग्स"
 
 #: src/plugins/sources/directory_watcher.c:317
 msgid "Home"
-msgstr ""
+msgstr "होम"
 
 #: src/plugins/sources/directory_watcher.c:380
 #, c-format
 msgid "Directory (%s)"
-msgstr ""
+msgstr "निर्देशिका (%s)"
 
 #: src/plugins/sources/directory_watcher.c:466
 msgid "Drawer Plugin : Directory Watcher"
-msgstr ""
+msgstr "द्रावर प्लगइन : डायरेक्टरी वॉचर"
 
 #: src/plugins/sources/directory_watcher.c:507
 msgid "Watch path"
-msgstr ""
+msgstr "वॉच पथ"
 
 #: src/plugins/sources/directory_watcher.c:513
 msgid "Custom file manager"
-msgstr ""
+msgstr "कस्टम फ़ाइल प्रबंधक"
 
 #: src/plugins/sources/directory_watcher.c:519
 msgid "Sort Options"
-msgstr ""
+msgstr "विकल्प क्रमबद्ध करें"
 
 #: src/plugins/sources/directory_watcher.c:520
 msgid "Sort directories first"
-msgstr ""
+msgstr "पहले निर्देशिकाओं के अनुसार क्रमबद्ध करें"
 
 #: src/plugins/sources/directory_watcher.c:524
 msgid "Sort by name"
-msgstr ""
+msgstr "नाम के अनुसार क्रमबद्ध करें"
 
 #: src/plugins/sources/directory_watcher.c:526
 msgid "Sort by access time"
-msgstr ""
+msgstr "पहुँच समय के अनुसार क्रमबद्ध करें"
 
 #: src/plugins/sources/directory_watcher.c:528
 msgid "Sort by modification time"
-msgstr ""
+msgstr "संशोधन समय के अनुसार क्रमबद्ध करें"
 
 #: src/plugins/sources/directory_watcher.c:530
 msgid "Sort by change time"
-msgstr ""
+msgstr "समय के अनुसार क्रमबद्ध करें"
 
 #: src/plugins/sources/directory_watcher.c:532
 msgid "Sort by size"
-msgstr ""
+msgstr "आकार के अनुसार क्रमबद्ध करें"
 
 #: src/plugins/sources/history.c:179
 msgid "History settings"
-msgstr ""
+msgstr "इतिहास सेटिंग"
 
 #: src/plugins/sources/history.c:384 src/plugins/sources/launcher.c:301
 msgid "Change Item Properties"
-msgstr ""
+msgstr "आइटम गुण बदलें"
 
 #: src/plugins/sources/history.c:394
 msgid "Blacklist Item"
-msgstr ""
+msgstr "ब्लैकलिस्ट आइटम"
 
 #: src/plugins/sources/history.c:400 src/plugins/sources/launcher.c:306
 msgid "Remove Item"
-msgstr ""
+msgstr "आइटम हटाएँ"
 
 #: src/plugins/sources/history.c:583
 msgid "Drawer Plugin : History"
-msgstr ""
+msgstr "ड्रॉअर प्लग-इन : इतिहास"
 
 #: src/plugins/sources/history.c:630 src/plugins/sources/launcher.c:585
 msgid "Sorting options"
-msgstr ""
+msgstr "सॉर्टिंग विकल्प"
 
 #: src/plugins/sources/history.c:631
 msgid "Sort applications by executable"
-msgstr ""
+msgstr "एक्जीक्यूटेबल्स के आधार पर एप्लिकेशन को सॉर्ट करें"
 
 #: src/plugins/sources/history.c:633
 msgid "Sort applications by date"
-msgstr ""
+msgstr "तिथि के आधार पर एप्लिकेशन को सॉर्ट करें"
 
 #: src/plugins/sources/history.c:635
 msgid "Sort applications by popularity"
-msgstr ""
+msgstr "लोकप्रियता के आधार पर एप्लिकेशन को सॉर्ट करें"
 
 #: src/plugins/sources/history.c:638 src/plugins/sources/history.c:670
 msgid "Blacklist"
-msgstr ""
+msgstr "ब्लैकलिस्ट"
 
 #: src/plugins/sources/history.c:639
 msgid "Enable Blacklist"
-msgstr ""
+msgstr "ब्लैकलिस्ट सक्षम करें"
 
 #: src/plugins/sources/history.c:644
 msgid "General"
-msgstr ""
+msgstr "सामान्य"
 
 #: src/plugins/sources/history.c:649
 msgid "Blacklisted Applications"
-msgstr ""
+msgstr "ब्लैकलिस्टेड एप्लिकेशन।"
 
 #: src/plugins/sources/history.c:660 src/plugins/sources/launcher.c:571
 msgid "Add"
-msgstr ""
+msgstr "जोड़ें।"
 
 #: src/plugins/sources/history.c:663 src/plugins/sources/launcher.c:573
 msgid "Delete"
-msgstr ""
+msgstr "हटाएं।"
 
 #: src/plugins/sources/history.c:714
 msgid "Add Blacklisted Application"
-msgstr ""
+msgstr "ब्लैकलिस्ट किए गए एप्लिकेशन को जोड़ें।"
 
 #: src/plugins/sources/history.c:715
 msgid "Enter application name"
-msgstr ""
+msgstr "एप्लिकेशन का नाम दर्ज करें।"
 
 #: src/plugins/sources/launcher.c:182
 msgid "Launcher settings"
-msgstr ""
+msgstr "लॉन्चर सेटिंग्स"
 
 #: src/plugins/sources/launcher.c:327
 #, c-format
 msgid "%s source"
-msgstr ""
+msgstr "%s स्रोत"
 
 #: src/plugins/sources/launcher.c:507
 msgid "Drawer Plugin : Launcher"
-msgstr ""
+msgstr "ड्रावर प्लगइन: लांचर"
 
 #: src/plugins/sources/launcher.c:563
 msgid "Selected Bar Source"
-msgstr ""
+msgstr "बार स्रोत का चयन करें"
 
 #: src/plugins/sources/launcher.c:575
 msgid "Configure"
-msgstr ""
+msgstr "कॉन्फ़िगर"
 
 #: src/plugins/sources/launcher.c:586
 msgid "Unsorted"
-msgstr ""
+msgstr "क्रमहीन"
 
 #: src/plugins/sources/launcher.c:588
 msgid "Sort applications by local rating"
-msgstr ""
+msgstr "स्थानीय रेटिंग के अनुसार आवेदन को क्रमबद्ध करें"
 
 #: src/plugins/sources/launcher.c:590
 msgid "Sort applications by overall popularity"
-msgstr ""
+msgstr "समग्र लोकप्रियता के आधार पर आवेदन को क्रमबद्ध करें"
 
 #: src/plugins/sources/launcher.c:625
 msgid "Create new Launcher source"
-msgstr ""
+msgstr "नया लॉन्चर स्रोत बनाएँ"
 
 #: src/plugins/sources/launcher.c:626
 msgid "Enter a name for this new source:"
-msgstr ""
+msgstr "इस नए स्रोत का नाम दर्ज करें"
 
 #: src/plugins/sources/launcher.c:639
 #, c-format
@@ -287,31 +296,33 @@ msgid ""
 "You requested to delete \"%s\".<br><br>Are you sure you want to delete this "
 "bar source?"
 msgstr ""
+"आपने \"%s\" को हटाने का अनुरोध किया है।<br><br>क्या आप वाकई इस "
+"बार स्रोत को हटाना चाहते हैं?"
 
 #: src/plugins/sources/launcher.c:643
 msgid "Are you sure you want to delete this bar source?"
-msgstr ""
+msgstr "क्या आप वाकई इस बार स्रोत को हटाना चाहते हैं?"
 
 #: src/plugins/views/list.c:168
 msgid "List settings"
-msgstr ""
+msgstr "सूची सेटिंग्स"
 
 #: src/plugins/views/list.c:778
 msgid "Drawer Plugin : List"
-msgstr ""
+msgstr "ड्रावर प्लगइन: सूची"
 
 #: src/plugins/views/list.c:814
 msgid "Item size options"
-msgstr ""
+msgstr "आइटम आकार विकल्प"
 
 #: src/plugins/views/list.c:815
 msgid "Large"
-msgstr ""
+msgstr "बड़ा"
 
 #: src/plugins/views/list.c:817
 msgid "Medium"
-msgstr ""
+msgstr "मध्यम"
 
 #: src/plugins/views/list.c:819
 msgid "Small"
-msgstr ""
+msgstr "छोटा"
